syntax = "proto3";

package layer.oracle;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/tellor-io/layer/x/oracle/types";

// QueryMeta represents the metadata of a query
message QueryMeta {
  // unique id of the query that changes after query's lifecycle ends
  uint64 id = 1;
  // amount of tokens that was tipped
  string amount = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  // expiration time of the query
  google.protobuf.Timestamp expiration = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  // timeframe of the query according to the data spec
  google.protobuf.Duration registry_spec_timeframe = 4 [
    (gogoproto.stdduration) = true,
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // indicates whether query has revealed reports
  bool has_revealed_reports = 5;
  // query_data: decodable bytes to field of the data spec
  bytes query_data = 6;
  // string identifier of the data spec
  string query_type = 7;
  // bool cycle list query
  bool cycle_list = 8;
}
